# real_estate_ai_platform

./: .env.example  .gitignore  DesignDoc.md  LICENSE  README.md  pyproject.toml  run.py
.agents/rules/: docker.md  flask.md  frontend.md  langchain.md
nestscout/: __init__.py  config.py  extensions.py
nestscout/agents/: __init__.py  config.py  import_agent.py  poi_agent.py  price_agent.py  property_agent.py  supervisor.py
nestscout/api/: __init__.py  admin.py  ai.py  auth.py  imports.py  pois.py  profiles.py  properties.py  scores.py
nestscout/cli/: __init__.py  ai.py  db.py  pois.py  properties.py  scoring.py  users.py
nestscout/models/: __init__.py  associations.py  base.py  data_source.py  poi.py  property.py  scoring.py  search_profile.py  user.py
nestscout/schemas/: __init__.py  auth.py  import_schemas.py  poi.py  profile.py  property.py
nestscout/services/: ai_service.py  auth_service.py  import_service.py  poi_service.py  property_service.py  scoring_service.py
nestscout/utils/: __init__.py  csv_parser.py  geo.py
tests/: conftest.py
